[package]
name = "pikachu"
version = "0.1.0"
edition = "2021"
authors = ["Harsh Pratap Singh <harshpratapsingh8210@gmail.com>"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = "0.12.3"
clap = { version = "4.1", features = ["derive"] }
libp2p = { version = "0.53", features = ["tcp", "dns", "async-std", "noise", "yamux"] }
async-trait = "0.1.85"
tracing = "0.1.41"
tracing-subscriber = "0.3"
sha2 = "0.10"
rand = "0.9"
log = "0.4"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
prost = { version = "0.12.6", features = ["prost-derive"] }
prost-types = "0.13.1"
thiserror = "2.0.11"
hex = "0.4.3"

[build-dependencies]
prost-build = "0.13.1"

[profile.release]
lto = true
panic = "abort"