[package]
name = "pikachu"
version = "0.1.0"
edition = "2021"
authors = ["Harsh Pratap Singh <harshpratapsingh8210@gmail.com>"]

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
clap = { version = "4.1", features = ["derive"] }
async-trait = "0.1.85"
tracing = "0.1.41"
tracing-subscriber = "0.3"
sha2 = "0.10"
rand = "0.9"
log = "0.4"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
prost = { version = "0.13", features = ["prost-derive"] }
prost-types = "0.13"
thiserror = "2.0.11"
hex = "0.4.3"
chrono = "0.4"
log4rs = "1.3"

[build]
rustflags = ["-Clink-arg=-fuse-ld=mold"]

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
panic = "abort"

[profile.ci]
inherits = "release"
debug = false       # Disable debug symbols
lto = "off"         # Disable Link-Time Optimization (LTO)
codegen-units = 32  # Increase parallelism
incremental = false # Disable incremental compilation for clean builds